--- a/Module_01_Lab_01_Features.ipynb
+++ b/Module_01_Lab_01_Features.ipynb
@@ -60,7 +60,7 @@
         "import plotly.express as px\n",
         "import pandas as pd"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -118,7 +118,7 @@
         "fr1 = wikipedia.page(topic1).content\n",
         "fr2 = wikipedia.page(topic2).content"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -143,7 +143,7 @@
       "source": [
         "fr2"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -180,7 +180,7 @@
         "  text = re.sub('[^a-z]+', '', text) # only keep characters\n",
         "  return text"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -194,7 +194,7 @@
         "fr1 = cleanup(fr1)\n",
         "fr2 = cleanup(fr2)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -209,7 +209,7 @@
       "source": [
         "print(eng1)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -259,7 +259,7 @@
         "  keys, values = map(list, zip(*zipped_sorted))\n",
         "  plt.bar(keys, values)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -291,7 +291,7 @@
         "plt.title('English 2')\n",
         "plt.show()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -335,7 +335,7 @@
         "plt.title('French 2')\n",
         "plt.show()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -399,7 +399,7 @@
         "plt.title('French 2')\n",
         "plt.show()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -496,7 +496,7 @@
         "# Show the plot\n",
         "plt.show()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -537,7 +537,7 @@
         "# Show the plot\n",
         "plt.show()\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -580,7 +580,7 @@
         "  for ii in range(n):\n",
         "    print(f'{ind2tup(arg[ii])} : {f[arg[ii]]}')"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -628,7 +628,7 @@
         "#loading the dataset\n",
         "(train_X, train_y), (test_X, test_y) = mnist.load_data()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -658,7 +658,7 @@
         "no1 = train_X[train_y==1,:,:]\n",
         "no0 = train_X[train_y==0,:,:]"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -690,7 +690,7 @@
         "  plt.imshow(no0[ii,:,:])\n",
         "plt.show()"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -732,7 +732,7 @@
         "sum1 = np.sum(no1>0, (1,2)) # threshold before adding up\n",
         "sum0 = np.sum(no0>0, (1,2))"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -758,7 +758,7 @@
         "plt.hist(sum1, alpha=0.7);\n",
         "plt.hist(sum0, alpha=0.7);"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -805,7 +805,7 @@
         "  hole = hull & ~ (img>0) # remove the original digit to leave behind the holes\n",
         "  return hole"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -836,7 +836,7 @@
         "  plt.imshow(img)\n",
         "  plt.show()"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -886,7 +886,7 @@
         "plt.hist(hole1, alpha=0.7);\n",
         "plt.hist(hole0, alpha=0.7);"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -926,7 +926,7 @@
         "  hull =  im1 & im2 & im3 & im4 # this will create a binary image with all the holes filled in.\n",
         "  return hull"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -948,7 +948,7 @@
         "  plt.imshow(img)\n",
         "  plt.show()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -998,7 +998,7 @@
         "plt.hist(hull1, alpha=0.7);\n",
         "plt.hist(hull0, alpha=0.7);"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1039,7 +1039,7 @@
         "  boundary = minus(img, rshift) | minus(img, lshift) | minus(img, ushift) | minus(img, dshift)\n",
         "  return boundary"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1061,7 +1061,7 @@
         "  plt.imshow(img)\n",
         "  plt.show()"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1102,7 +1102,7 @@
         "plt.hist(bound1, alpha=0.7);\n",
         "plt.hist(bound0, alpha=0.7);"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1160,7 +1160,7 @@
         "plt.legend(['0','1'])\n",
         "plt.show()"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1223,7 +1223,7 @@
         "fig = px.scatter_3d(df, x='Hole', y='Sum', z='Boundary', color='Class', opacity=0.1)\n",
         "fig.show()"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1285,6 +1285,79 @@
         "4. Will these features work for different classes other than 0 and 1?\n",
         "5. What will happen if we take more that two classes at a time?"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Which is the best combination of features?\n",
+        "\n",
+        "Determining the best combination of features depends on the specific task and the nature of the data. It often involves experimentation and testing different combinations to see which ones yield the best results for the given problem. In your case, you have extracted four features (Hole, Sum, Boundary, and Class) from the binary images of digits \"0\" and \"1.\" To identify the best combination, you can consider techniques like feature selection, feature importance, or even machine learning models that automatically select relevant features. The choice of the best combination may also depend on the downstream task you want to solve using these features."
+      ],
+      "metadata": {
+        "id": "mxPAvjynmRry"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2. How would you test or visualize four or more features?\n",
+        "\n",
+        "When you have more than three features (in this case, you have four), visualizing them becomes challenging in a traditional 3D scatter plot. Here are some strategies:\n",
+        "\n",
+        "Pairwise Scatter Plots: Create scatter plots for each pair of features to visualize their relationships. This can help identify correlations or patterns between pairs of features.\n",
+        "\n",
+        "Dimensionality Reduction: Techniques like Principal Component Analysis (PCA) or t-Distributed Stochastic Neighbor Embedding (t-SNE) can be used to reduce the dimensionality of the data while preserving as much information as possible. You can then visualize the reduced-dimensional data in 2D or 3D plots.\n",
+        "\n",
+        "Heatmaps: Create a heatmap to visualize the correlation matrix between features. High correlations may suggest redundant features.\n",
+        "\n",
+        "Parallel Coordinates Plot: For more than three features, a parallel coordinates plot can be useful. Each axis represents a feature, and lines connecting points indicate the relationships between features."
+      ],
+      "metadata": {
+        "id": "BMwYEuy2moE5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. Can you come up with your own features?\n",
+        "\n",
+        "Yes, you can create your own features based on domain knowledge or insights about the data. Feature engineering is a crucial step in machine learning, and it involves crafting features that capture relevant information from the data. For image data, features might include texture, color histograms, edge detection results, or any other characteristics that are meaningful for your task."
+      ],
+      "metadata": {
+        "id": "dD4_ICYcmoVp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4. Will these features work for different classes other than 0 and 1?\n",
+        "\n",
+        "The features you've extracted (Hole, Sum, Boundary) were designed specifically for binary classification tasks involving digits \"0\" and \"1.\" They may not be directly applicable to other classes without modification or the creation of new features tailored to those classes. Different classes may have distinct characteristics, and you may need to explore and engineer features that are relevant to the new classes."
+      ],
+      "metadata": {
+        "id": "J2jz8E7kmnDa"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "5. What will happen if we take more that two classes at a time?\n",
+        "\n",
+        "If you extend your analysis to include more than two classes, the complexity of the problem increases. You'll need to adapt your feature engineering, visualization, and modeling approaches accordingly. Here are some considerations:\n",
+        "\n",
+        "Multi-Class Classification: You will need to use multi-class classification algorithms instead of binary classification.\n",
+        "\n",
+        "Visualization: Visualizing data with more than two classes can be challenging. Techniques like dimensionality reduction or advanced visualization methods may be necessary.\n",
+        "\n",
+        "Feature Engineering: Depending on the new classes, you may need to engineer features that capture the characteristics specific to each class.\n",
+        "\n",
+        "Evaluation: You'll need to use appropriate evaluation metrics for multi-class classification, such as accuracy, precision, recall, F1-score, or confusion matrices.\n",
+        "\n",
+        "In summary, the choice of features and their effectiveness depends on the problem, data, and the specific classes you are dealing with. Experimentation and domain knowledge play a significant role in feature selection and engineering."
+      ],
+      "metadata": {
+        "id": "3lchkRLdmnvN"
+      }
     }
   ]
 }
