--- a/Module_01_Lab_02_MLPractice.ipynb
+++ b/Module_01_Lab_02_MLPractice.ipynb
@@ -51,7 +51,7 @@
         "# set randomseed\n",
         "rng = np.random.default_rng(seed=42)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -82,7 +82,7 @@
         " print(dataset.data.shape)\n",
         " print(dataset.target.shape)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,7 +131,7 @@
         "  predlabel = np.array([NN1(traindata, trainlabel, i) for i in testdata])\n",
         "  return predlabel"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -157,7 +157,7 @@
         "  predlabel = classes[rints]\n",
         "  return predlabel"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -180,7 +180,7 @@
         "  correct = (gtlabel==predlabel).sum() # count the number of times the groundtruth label is equal to the predicted label.\n",
         "  return correct/len(gtlabel)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -209,7 +209,7 @@
         "  split2label = label[split2]\n",
         "  return split1data, split1label, split2data, split2label"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -236,7 +236,7 @@
         "print('Number of other samples = ', len(alltrainlabel))\n",
         "print('Percent of test data = ', len(testlabel)*100/len(dataset.target),'%')"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -268,7 +268,7 @@
       "source": [
         "traindata, trainlabel, valdata, vallabel = split(alltraindata, alltrainlabel, 75/100)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -298,7 +298,7 @@
         "trainAccuracy = Accuracy(trainlabel, trainpred)\n",
         "print(\"Train accuracy using random classifier is \", trainAccuracy)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -339,7 +339,7 @@
         "valAccuracy = Accuracy(vallabel, valpred)\n",
         "print(\"Validation accuracy using random classifier is \", valAccuracy)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -377,7 +377,7 @@
         "valAccuracy = Accuracy(vallabel, valpred)\n",
         "print(\"Validation accuracy of nearest neighbour is \", valAccuracy)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -414,7 +414,7 @@
         "testAccuracy = Accuracy(testlabel, testpred)\n",
         "print('Test accuracy is ', testAccuracy)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -465,7 +465,7 @@
         "    accuracy += Accuracy(vallabel, valpred)\n",
         "  return accuracy/iterations # average of all accuracies"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -482,7 +482,7 @@
         "testpred = NN(alltraindata, alltrainlabel, testdata)\n",
         "print('test accuracy is ',Accuracy(testlabel, testpred) )"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -508,6 +508,51 @@
         "3. What is the effect of the number of iterations on the estimate? Do we get a better estimate with higher iterations?\n",
         "4. Consider the results you got for the previous questions. Can we deal with a very small train dataset or validation dataset by increasing the iterations?\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Does averaging the validation accuracy across multiple splits give more consistent results?\n",
+        "\n",
+        "ANS. Yes, averaging validation accuracy across multiple splits can give more consistent results. Averaging the results across these iterations helps to reduce the impact of randomness in the data split and provides a more stable estimate of your model's performance."
+      ],
+      "metadata": {
+        "id": "Pcz5q8vGohLq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2. Does it give more accurate estimate of test accuracy?\n",
+        "\n",
+        "ANS. Cross-validation, including averaging validation accuracy across multiple splits, provides a more accurate estimate of how well your model is likely to perform on unseen data compared to a single validation split."
+      ],
+      "metadata": {
+        "id": "WYUE0saaonPd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. What is the effect of the number of iterations on the estimate? Do we get a better estimate with higher iterations?\n",
+        "\n",
+        "ANS. The number of iterations (folds) in cross-validation can impact the estimate of your model's performance. In general, increasing the number of iterations can lead to a more reliable estimate, especially if your dataset is small."
+      ],
+      "metadata": {
+        "id": "2wKJFLCvonWo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4. Consider the results you got for the previous questions. Can we deal with a very small train dataset or validation dataset by increasing the iterations?\n",
+        "\n",
+        "ANS. Increasing the number of iterations in cross-validation can help when dealing with small datasets. It allows you to use your limited data more effectively by repeatedly splitting it into training and validation sets. However, there are limits to how much this can compensate for a very small dataset. If your dataset is extremely small, you might still face challenges related to overfitting or underfitting, and more data collection or data augmentation techniques may be necessary to improve model performance.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "rB-OETwFoncg"
+      }
     }
   ]
 }
