--- a/Module_01_Lab_03_Augmentation.ipynb
+++ b/Module_01_Lab_03_Augmentation.ipynb
@@ -53,7 +53,7 @@
         "from skimage.transform import rotate, AffineTransform, warp\n",
         "import math"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -85,7 +85,7 @@
         "train_X = train_X[::1200,:,:].copy() # subsample. Otherwise it will take too long!\n",
         "train_y = train_y[::1200].copy() # do the same to the labels"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -132,7 +132,7 @@
         "  correct = (gtlabel==predlabel).sum() # count the number of times the groundtruth label is equal to the predicted label.\n",
         "  return correct/len(gtlabel)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -159,7 +159,7 @@
         "testpred = NN(train_X, train_y, test_X)\n",
         "print('Baseline accuracy without augmentation is ', Accuracy(test_y, testpred))"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -198,7 +198,7 @@
         "plt.show()\n",
         "plt.imshow(rotate(train_X[2],25), cmap='gray')"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -259,7 +259,7 @@
         "    nsample[ii] = rotate(sample[ii], angle[ii])\n",
         "  return np.squeeze(nsample) # take care if the input had only one sample."
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -294,7 +294,7 @@
         "plt.subplot(1,3,3)\n",
         "plt.imshow(augRotate(sample, angleconstraint), cmap='gray') # one more image from the same sample"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -362,7 +362,7 @@
         "testpred = NN(augdata, auglabel, test_X)\n",
         "print('Accuracy after rotation augmentation is ', Accuracy(test_y, testpred))"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -408,7 +408,7 @@
         "  accuracies[ii] = Accuracy(test_y, testpred)\n",
         "  print('Accuracy after rotation augmentation constrained by ',angleconstraints[ii], ' is ', accuracies[ii], flush=True)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -467,7 +467,7 @@
         "maxind = np.argmax(accuracies)\n",
         "plt.scatter(angleconstraints[maxind], accuracies[maxind], c='red')"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -518,7 +518,7 @@
         "    img = np.roll(img, (xshift, yshift),(0,1))\n",
         "  return img"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -539,7 +539,7 @@
         "# apply shear\n",
         "plt.imshow(shear(sample, 0.4), cmap='gray')"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -600,7 +600,7 @@
         "    nsample[ii] = shear(sample[ii], amt[ii])\n",
         "  return np.squeeze(nsample) # take care if the input had only one sample."
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -638,7 +638,7 @@
         "  accuracies[ii] = Accuracy(test_y, testpred)\n",
         "  print('Accuracy after shear augmentation constrained by ',shearconstraints[ii], ' is ', accuracies[ii], flush=True)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -689,7 +689,7 @@
         "maxind = np.argmax(accuracies)\n",
         "plt.scatter(shearconstraints[maxind], accuracies[maxind], c='red')"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -740,7 +740,7 @@
         "    nsample[ii] = rotate(shear(sample[ii], amt[ii]), angle[ii]) # first apply shear, then rotate\n",
         "  return np.squeeze(nsample) # take care if the input had only one sample."
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -781,7 +781,7 @@
         "  accuracies[ii] = Accuracy(test_y, testpred)\n",
         "  print('Accuracy after augmentation shear:',hyp[ii][0], 'angle:',hyp[ii][1], ' is ', accuracies[ii], flush=True)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -894,7 +894,7 @@
         "ax.set_yticklabels(shearconstraints);\n",
         "plt.colorbar(im)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -942,6 +942,50 @@
         "\n",
         "Whenever you do any experiment, a good practice is to vary the hyperparameters gradually and create a graph of your results, like we did for gridsearch."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. What is the best value for angle constraint and shear constraint you got? How much did the accuracy improve as compared to not using augmentations?\n",
+        "\n",
+        "ANS. Best Augmentation Values & Impact Default (GPT-3.5) What is the best value for angle constraint and shear constraint you got? How much did the accuracy improve as compared to not using augmentations? ChatGPT I apologize for any confusion, but it seems like you're referring to a specific task or dataset related to computer vision or machine learning. To provide accurate information on the best values for angle and shear constraints and their impact on accuracy, I would need more context about the task, dataset, and the specific augmentation techniques you are using. Please provide additional details, and I'll do my best to assist you further."
+      ],
+      "metadata": {
+        "id": "89RTTCQIp3la"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2. Can you increase the accuracy by increasing the number of augmentations from each sample?\n",
+        "\n",
+        "ANS. Yes, increasing the number of augmentations from each sample can sometimes improve accuracy, but it should be done carefully to avoid overfitting. Finding the right balance is key for better model performance."
+      ],
+      "metadata": {
+        "id": "O7t8lf02p84L"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. Try implementing a few augmentations of your own and experimenting with them. A good reference is here.\n",
+        "\n",
+        "ANS. Certainly! You can experiment with image augmentations like rotation, flip, brightness adjustments, zoom, noise, color changes, and blur to improve your model's performance. Libraries like OpenCV and PIL in Python can help you implement these augmentations."
+      ],
+      "metadata": {
+        "id": "mc2QfnHBp8-p"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4. Try combining various augmentations. What is the highest accuracy you can get? What is the smallest training dataset you can take and still get accuracy above 50%?\n",
+        "\n",
+        "ANS. I don't have the capability to conduct experiments, so I can't provide specific accuracy values or dataset sizes for your particular task. The highest accuracy achievable by combining augmentations depends on various factors including the dataset, the model architecture, and the problem you're trying to solve. To find the smallest training dataset size while maintaining an accuracy above 50%, you'll need to experiment with different combinations of augmentations and evaluate your model's performance through cross-validation or a validation dataset. This process will help you determine the optimal dataset size and augmentation strategy for your specific problem."
+      ],
+      "metadata": {
+        "id": "7_sopb7fp9V-"
+      }
     }
   ]
 }
